# talk-support-asr

./: .gitignore  README.md  mise.toml
.devcontainer/: devcontainer.json
backend/: main.py  pyproject.toml
backend/app/: main.py
backend/app/config/: __init__.py  config.py
backend/app/middlewares/: logStartEndMiddleware.py
backend/app/routers/: ping.py  transcript.py
docs/: development.md
frontend/: .env  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AudioButton.tsx  ErrorDialog.tsx  FetchTest.tsx  HelpModal.tsx  MessageDialog.tsx  RecorderManager.tsx  SentenceArea.tsx  TranscriptFailDialog.tsx  VolumeBar.tsx
frontend/src/components/ui/: color-mode.tsx  provider.tsx
frontend/src/config/: config.ts  theme.ts
frontend/src/hooks/: useNotificationStore.ts  useRecorderStore.ts  useTranscriptStatusStore.ts  useTranscriptStore.ts
frontend/src/utils/: webApi.ts
label_studio_work/: main.py  pyproject.toml
notebooks/: dataset.ipynb  training.ipynb
